components/works/Works.module.css
.mainContainer{
    width: 100vw;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-image: url("../../public/BG Ellipse.png");
    background-attachment: fixed;
    scroll-behavior: smooth;
}

.workContainer{
    background: rgba( 194, 145, 21, 0.30 );
    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
    backdrop-filter: blur( 10px );
    -webkit-backdrop-filter: blur( 10px );
    border: 1px solid rgba( 255, 255, 255, 0.18 );
    border-radius: 30px;
    width: 75%;
    display: flex;
    margin: 20px;
}

.slidesContainer{
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.slides{
    padding: 5px;
    width: 90%;
}

.workContainer img{
    border-radius: 10px;
}

.workContainer h1{
    color: #e5a90f;
    font-size: min(70px, 2.5vw);
    width: 100%;
    letter-spacing: 1px;
}

.workContainer p{
    font-size: min(35px, 1.5vw);
    width: 100%;
}

.details{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 50%;
}

.details img{
    transform: scale(0.7);
}

.details button{
    width: 8vw;
    min-width: 65px;
    max-width: 250px;
    height: 3vw;
    max-height: 60px;
    font-family: Poppins,sans-serif;
    font-weight: bolder;
    letter-spacing: 2px;
    border-radius: 40px;
    font-size: min(40px,calc(4px + 1vw));
    background-color: #DAA520;
    cursor: pointer;
    border: transparent;
}

.buttonsContainer{
    width: 90%;
}

.details div{
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

@media (max-width: 40rem) {
    .mainContainer{
        width: 100vw;
        background-attachment: fixed;
        background-size: contain;
    }

    .workContainer{
        flex-direction: column;
        width: 92vw;
        margin: 10px 0 10px 0;
    }

    .slidesContainer{
        width: 100%;
        padding: 0;
        margin: 10px 0 0 0;
    }

    .slides{
        padding: 0;
    }

    .details{
        width: 100%;
        padding: 10px;
    }

    .details h1{
        width: 100%;
        font-size: 2rem;
    }

    .details p{
        font-size: 1.1rem;
        margin: 0 0 10px 0;
    }

    .details img{
        transform: scale(0.85);
    }

    .buttonsContainer{
        width: 100%;
        margin: 10px;
    }

    .details button{
        width: 25vw;
        height: 10vw;
        font-size: 1rem;
    }
}

